--- a/NewLMComModel/Design/Templates/htmlHead.tt
+++ b/NewLMComModel/Design/Templates/htmlHead.tt
@@ -29,7 +29,7 @@
   <![endif]-->
   <!--[if (gt IE 8)|!(IE)]><!-->
   <script type='text/javascript' src='../jslib/scripts/jquery2<#=min#>.js'></script>
-  <script src="../jslib/scripts/angular.js" type="text/javascript"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular.js" type="text/javascript"></script>
   <!--<![endif]-->
   <script type='text/javascript' src='../jslib/scripts/underscore<#=min#>.js'></script>
   <script type='text/javascript' src='../jslib/js/lmconsoleinit.js'></script>
