--- a/Web4/BlendedAPI/vyzva/Views/productHome.html
+++ b/Web4/BlendedAPI/vyzva/Views/productHome.html
@@ -1,1 +1,2 @@
-﻿<h1>productHome</h1>
+﻿<h1>Product home: {{params.producturl}}</h1>
+<div id="ex-place" data-show-exercise="" data-ex-url="exercise url"></div>
