--- a/Web4/BlendedAPI/vyzva/Views/productHome.html
+++ b/Web4/BlendedAPI/vyzva/Views/productHome.html
@@ -1,2 +1,2 @@
-﻿<h1>Product home: {{params.producturl}}</h1>
-<div id="ex-place" data-show-exercise="" data-ex-url="exercise url"></div>
+﻿<h2>Product home</h2>
+<!--<div id="ex-place" data-show-exercise="" data-ex-url="exercise url"></div>-->
