Propojeni Tasks, ProductSitemap a Controllers

--- a/Web4/BlendedAPI/vyzva/Views/productHome.html
+++ b/Web4/BlendedAPI/vyzva/Views/productHome.html
@@ -1,2 +1,11 @@
 ﻿<h2>Product home</h2>
+<a ui-sref="pg.ajs.vyzvaproduct.pretest">Pretest</a><br />
+<a ui-sref="pg.ajs.vyzvaproduct.pretestitem">Pretest Item</a><br />
+<a ui-sref="pg.ajs.vyzvaproduct.lesson">Lesson</a><br />
+<a ui-sref="pg.ajs.vyzvaproduct.checktest">Check test</a><br />
+<a ui-sref="pg.ajs.vyzvaproduct.exercise({tasktype:'task', url:'url'})">Exercise</a><br />
+
+<a data-ng-click="events.greenBtnClick()" class="btn btn-success">Run</a><br />
+
 <!--<div id="ex-place" data-show-exercise="" data-ex-url="exercise url"></div>-->
+<h3>{{greenTitle}}</h3>
