--- a/Web4/BlendedAPI/vyzva/Views/exercise.html
+++ b/Web4/BlendedAPI/vyzva/Views/exercise.html
@@ -1,3 +1,3 @@
-﻿<h1>{{params.producturl}}</h1>
-<div data-ui-view></div>
+﻿<h2>Exercise</h2>
 <!--<div id="ex-place" data-show-exercise="" data-ex-url="exercise url"></div>-->
+
