--- a/Web4/BlendedAPI/vyzva/Views/productHome.html
+++ b/Web4/BlendedAPI/vyzva/Views/productHome.html
@@ -1,9 +1,7 @@
 ﻿<h2>Product home</h2>
 <a ui-sref="pg.ajs.vyzvaproduct.pretest">Pretest</a><br />
-<a ui-sref="pg.ajs.vyzvaproduct.pretestitem">Pretest Item</a><br />
-<a ui-sref="pg.ajs.vyzvaproduct.lesson">Lesson</a><br />
-<a ui-sref="pg.ajs.vyzvaproduct.checktest">Check test</a><br />
-<a ui-sref="pg.ajs.vyzvaproduct.exercise({tasktype:'task', url:'url'})">Exercise</a><br />
+<a ui-sref="pg.ajs.vyzvaproduct.module({url:'url', mode:'course'})">Module</a><br />
+<a ui-sref="pg.ajs.vyzvaproduct.exercise({tasktype:'task', url:'url', mode:'course'})">Exercise</a><br />
 
 <a data-ng-click="events.greenBtnClick()" class="btn btn-success">Run</a><br />
 
