--- a/Web4/BlendedAPI/vyzva/Views/_productTemplate.html
+++ b/Web4/BlendedAPI/vyzva/Views/_productTemplate.html
@@ -1,3 +1,5 @@
-﻿<h1>{{params.producturl}}</h1>
+﻿
+<h1>{{ts.producturl}}</h1>
+<h2>{{ts.title}}</h2>
 <div data-ui-view></div>
 <!--<div id="ex-place" data-show-exercise="" data-ex-url="exercise url"></div>-->
