--- a/Web4/JsLib/css/lm.less
+++ b/Web4/JsLib/css/lm.less
@@ -11,4 +11,5 @@
 @import "author.less";
 @import "../../AuthorWeb/smartText.less";
 @import "../../AuthorWeb/doc.less";
+//@import "../../BlendedAPI/Styles/style.less";
 
