--- a/Web4/BlendedAPI/vyzva/Views/home.html
+++ b/Web4/BlendedAPI/vyzva/Views/home.html
@@ -2,4 +2,4 @@
 <a ui-sref="pg.ajs.vyzvaproduct.module({url:'url', mode:'course'})">Module</a><br />
 <a ui-sref="pg.ajs.vyzvaproduct.exercise({tasktype:'task', url:'url', mode:'course'})">Exercise</a><br />
 
-<div data-ng-include="ts.dataPretestItem"></div>
+<div data-ng-include="::ts.dataPretestItem"></div>
