--- a/Web4/BlendedAPI/vyzva/Views/home/pretestItem.html
+++ b/Web4/BlendedAPI/vyzva/Views/home/pretestItem.html
@@ -1,16 +1,11 @@
-﻿<div class="alert alert-success" data-ng-if="ts.prt.canRun">
+﻿<div data-ng-if="::canRun">
   <p>
-    <button class="btn btn-success btn-lg" data-ng-click="ts.prt.run()">1. {{ts.prt.btnTitle}}</button>
+    <button class="btn btn-success btn-lg" data-ng-click="run()">{{::btnTitle}}</button>
   </p>
-  <p>
-    <br />
-    Rozřazovací určí vaši jazykovou úroveň (A1, A2, B1 nabo B2), na základě které se zvolí odpovídající pokračování vašeho kurzu.
-  </p>
+  Rozřazovací určí vaši jazykovou úroveň (A1, A2, B1 nabo B2), na základě které se zvolí odpovídající pokračování vašeho kurzu.
 </div>
 
-<div class="alert alert-default" data-ng-if="!ts.prt.canRun" style="padding-top:10px;">
-  <h3>1. Rozřazovací test dokončen: vaše jazyková úroveň je <b class="text-success">{{ts.prt.resultLevel}}</b></h3>
-  <p>
-    Můžete si také <a ui-sref="{{ts.prt.previewUrl}}">Prohlédnout výsledky rozřazovacího testu.</a>.
-  </p>
+<div data-ng-if="::!canRun">
+  <h4>Rozřazovací test dokončen: vaše jazyková úroveň je {{::targetLevel | levelText}}</h4>
+  <!--Můžete si také <a ui-sref="{{previewUrl}}">Prohlédnout výsledky rozřazovacího testu.</a>.-->
 </div>
