--- a/Web4/BlendedAPI/vyzva/Views/_pageTemplate.html
+++ b/Web4/BlendedAPI/vyzva/Views/_pageTemplate.html
@@ -4,7 +4,7 @@
     <div data-ng-include="::state.layoutToolbarType | vyzva$state$viewpath"></div>
   </div>
 </div>
-<div class="container" ng-if="::!!ts.breadcrumb && ts.breadcrumb.length>0">
+<div class="container" ng-if="::!state.ommitBreadCrumb && !!ts.breadcrumb && ts.breadcrumb.length>0">
   <ol class="breadcrumb">
     <li data-ng-repeat="item in ::ts.breadcrumb" data-ng-class="::{'active': item.active}">
       <a data-ng-if="::!item.active" data-ng-href="{{::item.url}}">{{::item.title}}</a>
@@ -15,7 +15,7 @@
 
 <div class="container-fluid">
   <div class="container">
-    <h1>{{::ts.title}}</h1>
+    <h1 ng-if="::!state.ommitTitle">{{::ts.title}}</h1>
     <div data-ng-include="::state.layoutContentId | vyzva$state$viewpath"></div>
   </div>
 </div>
