--- a/Web4/BlendedAPI/vyzva/Views/exercise.html
+++ b/Web4/BlendedAPI/vyzva/Views/exercise.html
@@ -1,3 +1,4 @@
-﻿<div class="new-ea" data-show-exercise=""></div>
-<div id="exercisePlace" class="new-ea"></div>
+﻿<div vyzva$exercise$modulemap class="module-map-items" ng-if="::!state.exerciseOmitModuleMap" items="::ts.modItems" select-exercise="::ts.selectExerciseWrapper()" ></div>
+<div vyzva$exercise$instruction user="::ts.user" do-reset="::ts.resetExerciseWrapper()" instruction-data="::exerciseService.instructionData" state="::state"></div>
+<div class="new-ea" data-show-exercise=""></div>
 
