--- a/NewLMComModel/Design/Templates/htmlHead.tt
+++ b/NewLMComModel/Design/Templates/htmlHead.tt
@@ -25,6 +25,7 @@
     .ng-hide, .alert.advertise {
       display: none !important;
      }
+     .nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
   </style>
   <![endif]-->
   <!--[if (gt IE 8)|!(IE)]><!-->
@@ -35,8 +36,9 @@
   <script type='text/javascript' src='../jslib/js/lmconsoleinit.js'></script>
 
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular-route.js" type="text/javascript"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular-resource.js" type="text/javascript"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular-animate.js" type="text/javascript"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js" type="text/javascript"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.13.3/ui-bootstrap-tpls.js" type="text/javascript"></script>
 
   <link href="../font-awesome/lm/externals<#=themeId#>.css" rel="stylesheet"/>
   <link rel="stylesheet" type="text/css" href="../jslib/ea/ea.css" />
