--- a/Web4/BlendedAPI/vyzva/Views/lector/_tabs.html
+++ b/Web4/BlendedAPI/vyzva/Views/lector/_tabs.html
@@ -1,4 +1,4 @@
-﻿<tabset type="pills">
+﻿<tabset type="pills" class="lm-tabs">
   <tab ng-repeat="it in ::tabs" heading="{{::it.shortTitle}}" select="navigate(it.idx)" active="::it.idx==actIdx()"></tab>
 </tabset>
 <div class="container lm-tabs-header">
