--- a/Web4/BlendedAPI/Styles/style.less
+++ b/Web4/BlendedAPI/Styles/style.less
@@ -10,6 +10,11 @@
     margin-bottom: 0;
   }
 
+  .nav-pills > li > a {
+    border-bottom-left-radius:0;
+    border-bottom-right-radius:0;
+  }
+
   .topbar {
     background-color: black;
     height: 50px;
@@ -234,13 +239,16 @@
     }
   }
 
+  .lm-tabs {
+    margin-top: 15px;
+  }
   .lm-tabs-header {
     margin-top: -1px;
     background-color: @panel-primary-heading-bg;
     color: @panel-primary-text !important;
 
     h3 {
-      margin-top: 10px;
+      margin: 16px 0;
     }
   }
 
